# linkit2-server

./: .gitignore  Dockerfile  README.md  cspell.config.yaml  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: pre-commit.yaml  workflow.yaml
src/linkit2/: dependencies.py  link_record_builder.py  linkit_config.py  linkit_settings.py  main.py  mongodb.py
src/linkit2/linkit_logging/: linkit_logger.py  logging_config.yaml
src/linkit2/linkit_logging/utils/: __init__.py
src/linkit2/models/: link_record.py  link_statistics_record.py  py_object_id.py
src/linkit2/routers/: health.py  links.py  slug.py  statistics.py
src/linkit2/utils/: __init__.py  deep_merge.py  generate_random_slug.py  generate_slug.py  is_url.py  now.py
src/template_py_pdm/: linkit_config.py  mongodb.py
tests/: conftest.py  test_is_url.py  test_link_record.py  test_link_statistics_record.py  test_linkit_config.py  test_main.py  test_mongodb.py  test_mongodb_basic_operations.py  test_mongodb_cleanup_operations.py  test_mongodb_complex_operations.py  test_mongodb_connection.py  test_mongodb_link_record.py  test_mongodb_link_statistics_record.py  test_sanity.py  test_settings.py
tests/test_routers/: test_health.py  test_links.py  test_slug.py  test_statistics.py
tests/test_utils/: test_deep_merge.py  test_generate_random_slug.py  test_generate_slug.py
