[project]
name = "linkit2"
version = "0.1.0"
description = "Linkit 2 is a simple link shortener service written in Python using FastAPI and MongoDB."
authors = [{ name = "Pranav Bodawala", email = "b.pranav.k@gmail.com" }]
dependencies = [
    "pydantic-settings>=2.2.1",
    "pydantic>=2.6.4",
    "pymongo[srv]>=4.6.3",
    "pyyaml>=6.0.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
_.env_file = ".env"
dev = "python src/linkit2/main.py"
test = { composite = ["test:unit", "test:integration"] }
"test:unit" = "pytest -m 'not mongodb'"
"test:integration" = "pytest -m mongodb"
# focus on specific tests for debugging
# inspired by mocha
"test:only" = "pytest -m only"

[tool.pdm.dev-dependencies]
dev = ["pytest>=8.1.1"]
